--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,73 @@
-*/config/development
-*/logs/log-*.php
-*/logs/!index.html
-*/cache/*
-*/cache/!index.html
+<!DOCTYPE html>
+<html lang="en">
+
+
+<head>
+
+<title> @KhulaaManch- Express Yourself...</title>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+
+<!--[if IE]>
+<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+
+<![endif]-->
+
+<!--[if IE 7]>
+
+<link rel="stylesheet" href="ie7.css" type="text/css" media="screen" />
+
+<![endif]-->
+
+<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.0/jquery.min.js" type="text/javascript"></script>
+<script src="js/jquery.anchor.js" type="text/javascript"></script>
+
+<script src="js/jquery.fancybox-1.2.6.pack.js" type="text/javascript"></script>
+
+
+</head>
+
+
+<body>
+
+<header> <!-- HTML5 header tag -->
+    
+      <div id="headercontainer">
+    
+    		<h1><a class="introlink anchorLink" href="http://www.khulaamanch.com">@KhulaaManch<font size="3px">.com</font></a></h1>
+    		
+    		<nav> <!-- HTML5 navigation tag -->
+    			<ul>
+    				<li><a class="introlink anchorLink" href="#"><b>About</b></a></li>
+    				<li><a class="portfoliolink anchorLink" href="#"><b>Disclaimer</b></a></li>
+    				<li><a class="contactlink anchorLink" href="#"><b>Contact</b></a></li>
+    			</ul>				
+    		</nav>
+    	</div>
+    </header>
+    <section id="contentcontainer"> <!-- HTML5 section tag for the content 'section' -->			
+    	<section id="contact"> <!-- HTML5 section tag for the contact 'section' -->    		
+    		<p> A brief description about <a href="http://www.khulaamanch.com">@khulaaManch</a> will be placed here...</p>
+    		
+    		<form id="contactform"> 
+				<p><label for="comment"><b>Compose a Tweet</b><font size="4px"> (Not more than 140 letters)</font></label></p> 
+    			<textarea name="comment" id="comment" tabindex="4"></textarea> 
+				<p align="right">
+    			<input name="submit" type="submit" id="submit" tabindex="5" value="Post your Tweet"/></p>
+    		</form> 
+    	</section>
+    	<footer align="right"> <!-- HTML5 footer tag -->
+				<ul align="right">
+					<li><img src="images/twitter.png" alt="" /><a href="http://twitter.com/KhulaaManch">Follow @KhulaaManch</a></li>
+					<li><font face="bold">Concept & Programming:</font><a href="http://www.twitter.com/chandangoopta"><font size="4px">Chandan Goopta</font></a></li>
+					<li><font face="bold">Interface Design:</font><a href="http://www.twitter.com/Chhucho_Keto"><font size="4px">Aryal Suraj</font></a></li>
+				</ul>
+    	
+    	</footer>	
+    
+    </section>
+    
+</body>
+
+</html>
